# teams-bot

./: .gitignore  README.md  m365agents.local.yml  m365agents.yml  pyproject.toml
appPackage/: manifest.json
env/: .env.dev  .env.local  .env.playground
infra/: azure.parameters.json
src/: agent.py  agent_service.py  app.py  bot.py  config.py  db.py  requirements.txt  store.py
src/agent/: ag.py  agent.py  prompt.txt
src/agent/prompts/: base_prompt.txt  knowledge_base_prompt.txt
src/agent/utils/: config.py  context_manager.py
src/resources/: config.dev.yaml  config.yaml
src/resources/prompts/: base_prompt.txt  knowledge_base_prompt.txt
src/utils/: config.py  context_manager.py  io_manager.py  logger.py
